--- a/Auth0WebApp/Pages/Shared/_Layout.cshtml
+++ b/Auth0WebApp/Pages/Shared/_Layout.cshtml
@@ -34,9 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Claims">Claims</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Claims">Claims</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             @if (User.Identity.IsAuthenticated)
                             {
