--- a/Auth0WebApp/Pages/Claims.cshtml
+++ b/Auth0WebApp/Pages/Claims.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using System.Security.Claims
-@model WebApp.Pages.ClaimsModel
+@model ClaimsModel
 @{
     ViewData["Title"] = "Claims";
 }
